# molecular_prediction

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.py  defaults.yaml
src/molecular_prediction/: prueba.py
src/molecular_prediction/data/: dataset.py  transforms.py
src/molecular_prediction/experiments/: curvature_analysis.py  main_comparison.py  noise_ablation.py  per_molecule_eval.py
src/molecular_prediction/models/: base.py  egnn.py  gin.py  gin_dist.py
src/molecular_prediction/training/: early_stopping.py  metrics.py  trainer.py  utils.py
