[project]
name = "molecular-prediction"
version = "0.1.0"
description = "Comparing E(3) equivariance in GNNs on QM9"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torch-geometric",
    "pyyaml",
    "tensorboard",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "ruff",
    "jupyter",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/molecular_prediction"]
